<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.Holo"
    android:background="#2b2b2b"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:src="@drawable/logo_controlid"
            android:layout_margin="16dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:layout_below="@+id/logo">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon_disconnect"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_disconnect"/>

            <ImageView
                android:id="@+id/icon_connect"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_connect"/>

            <TextView
                android:id="@+id/status_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:layout_marginBottom="16dp" />
        </LinearLayout>
    </RelativeLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/status">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/btn_001"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="#4B4B4B"
                    android:gravity="center"
                    android:paddingTop="18dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="0.5">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_test"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="12dp"
                        android:paddingBottom="20dp"
                        android:text="@string/btn_001" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_002"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="#4B4B4B"
                    android:gravity="center"
                    android:paddingTop="18dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="0.5">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_qr"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="12dp"
                        android:paddingBottom="20dp"
                        android:text="@string/btn_002" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">

                <LinearLayout
                    android:id="@+id/btn_003"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="#4B4B4B"
                    android:gravity="center"
                    android:paddingTop="18dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="0.5">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_cut"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="12dp"
                        android:paddingBottom="20dp"
                        android:text="@string/btn_003" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_004"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="#4B4B4B"
                    android:gravity="center"
                    android:paddingTop="18dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="0.5">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_cut"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="12dp"
                        android:paddingBottom="20dp"
                        android:text="@string/btn_004" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">

                <LinearLayout
                    android:id="@+id/btn_005"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="#4B4B4B"
                    android:gravity="center"
                    android:paddingTop="18dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="0.5">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_format"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="12dp"
                        android:paddingBottom="20dp"
                        android:text="@string/btn_005" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_006"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="#4B4B4B"
                    android:gravity="center"
                    android:paddingTop="18dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="0.5">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_barcode"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="12dp"
                        android:paddingBottom="20dp"
                        android:text="@string/btn_006" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>